--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-.container-fluid, .why-dps,.row{
+.container-fluid, .why-dps, .row {
   --bs-gutter-x: 0;
   --bs-gutter-y: 0;
-}
-
-.beyond-classroom img, .testimonials img {
-  border-radius: 10px;
 }
 
 .testimonial-item {
@@ -13,6 +9,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 .read-more {
   text-decoration: none;
   color: #014828;
@@ -20,4 +17,36 @@
   font-weight: 600;
   line-height: 29.05px;
 
+}
+
+.common-section-padding {
+  padding: 4% 12%;
+}
+
+h2 {
+  font-family: "Kameron";
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.highlight-main-body {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  p {
+    font-size: 14px;
+  }
+
+  .common-section-padding {
+    padding: 20px;
+  }
+
+  .school-main-body {
+    display: none !important;
+  }
+
+  .highlight-main-body {
+    display: block;
+  }
 }
