--- a/src/components/welcomeDPS.css
+++ b/src/components/welcomeDPS.css
@@ -19,11 +19,12 @@
 
 h2 {
     font-family: "Kameron";
-    font-size: 38px;
+    font-size: 36px;
     font-weight: 600;
 }
 
 h2 span {
+    font-family: "Kameron";
     font-weight: 400;
     display: inline-block;
 }
@@ -31,7 +32,7 @@ h2 span {
 p {
     font-family: 'Inter';
     font-weight: 400;
-    line-height: 29.05px;
+    /* line-height: 29.05px; */
 }
 
 .about-welcome {
@@ -56,5 +57,23 @@ p {
 
     .about-welcome {
         padding: 20px;
+    }
+
+    .image-rectangle{
+        height: 70%;
+    width: 90%;
+    margin: 0 auto;
+    align-items: center;
+    display: flex;
+    }
+
+    h2{
+        font-size: 28px;
+    }
+}
+
+@media (max-width:560px){
+    h2{
+        font-size: 22px;
     }
 }
