--- a/src/components/whyDPS.css
+++ b/src/components/whyDPS.css
@@ -3,12 +3,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
     background-color: #f9f9f9;
-    padding: 20px;
+    /* padding: 20px; */
     display: flex;
     justify-content: center;
     background-size: cover;
@@ -17,7 +16,7 @@ body {
 
 .why-main-section {
     display: flex;
-    padding: 4% 12% 4% 12%; 
+    /* padding: 4% 12% 4% 12%;  */
     gap: 20px;
 }
 
@@ -31,8 +30,8 @@ position: relative;
     text-align: center;
 }
 .why-images{
-    height: 75vh;
-    width: 400px;
+    height: 89vh;
+    /* width: 400px; */
 }
 .text-container {
     position: absolute;
@@ -41,7 +40,7 @@ position: relative;
     top: 10%;
     transform: translate(-50%, -50%);
     padding: 0.5rem;
-    text-align: center;
+    /* text-align: center; */
     font-size: 16px;
 }
 .why-text{
@@ -50,11 +49,6 @@ position: relative;
 }
 
 
-.why-content-left h2 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    font-family: 'Georgia', serif;
-}
 
 .why-video-card {
     background-image: url('https://via.placeholder.com/500x300');
@@ -75,15 +69,11 @@ position: relative;
     text-align: center;
 }
 
-.why-video-overlay h3 {
+/* .why-video-overlay h3 {
     font-size: 1.5em;
     margin-bottom: 10px;
-}
+} */
 
-.why-video-overlay p {
-    font-size: 1em;
-    margin-bottom: 20px;
-}
 
 .why-play-button {
     background-color: #fff;
@@ -96,7 +86,7 @@ position: relative;
 }
 
 .why-content-right h2 {
-    font-size: 2em;
+    /* font-size: 2em; */
     margin-bottom: 20px;
     font-family: 'Georgia', serif;
 }
@@ -114,15 +104,11 @@ position: relative;
     flex-direction: column;
     border-radius: 10px;
     padding: 25px;
-    width:why-content-left ;
+    /* width:why-content-left ; */
     max-width: 100%;
     text-align: center;
 }
-.why-event-card small {
-    font-size: .85em;
-    color: #000000;
-    line-height: 1;
-}
+
 .why-last-card{
     padding-top: 10Px;
     padding-left: 20px ;
@@ -138,21 +124,23 @@ position: relative;
     border-bottom-left-radius: 10px;
 }
 
-.why-event-card h3 {
+/* .why-event-card h3 {
     font-size: 1.2em;
     color: #333;
     font-family: 'Georgia', serif;
-}
+} */
 
 .why-event-card p {
-    font-size: 1em;
-    color: #666;
+    /* font-size: 1em; */
+    color:rgba(0, 0, 0, 1);
+font-weight: 500;
     line-height: 1;
+    text-align: center;
 }
 .mask_image{
     text-align: center;
-    height: 50px;
-    width: 50px;
+    /* height: 50px;
+    width: 50px; */
     margin: auto;
 }
 .mask{
@@ -160,6 +148,9 @@ position: relative;
     padding-bottom: 10px;
 }
 
+.mask_image p{
+    font-weight: 500 !important;
+}
 /* Responsive Design */
 @media screen and (max-width: 768px) {
     .why-main-section {
@@ -173,4 +164,17 @@ position: relative;
         height: auto;
         width: 40vh;
     }
+    
+}
+
+@media screen and (max-width: 365px){
+    .why-events-grid {
+        /* grid-template-columns: 0.5fr; */
+    }
+    .why-images {
+        /* height: auto; */
+        width: 25vh;
+    }
+
+    
 }
