--- a/src/components/newsEvent.css
+++ b/src/components/newsEvent.css
@@ -7,7 +7,6 @@
 
 body {
     background-color: #f9f9f9;
-    /* padding: 20px; */
     display: flex;
     justify-content: center;
 }
@@ -16,7 +15,6 @@ body {
     display: flex;
     max-width: 100%;
     gap: 20px;
-    /* margin: 0 auto; */
     padding: 4% 2% 4% 2%;
 }
 
@@ -27,16 +25,6 @@ body {
 .content-left {
     flex: 0;
 }
-.images{
-    /* height: 530Px; */
-    /* width: 500px; */
-}
-
-/* .content-left h2 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    font-family: 'Georgia', serif;
-} */
 
 .video-card {
     background-image: url('https://via.placeholder.com/500x300');
@@ -44,7 +32,6 @@ body {
     background-position: center;
     position: relative;
     border-radius: 10px;
-    /* height: 300px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,5 +121,14 @@ h4{
 
     .events-grid {
         grid-template-columns: 1fr;
+    }
+
+    .main-section .images{
+        width: 100%;
+    }
+
+    .last-card h3 {
+        font-size: 20px;
+        display: flex;
     }
 }
