--- a/src/components/parentSays.css
+++ b/src/components/parentSays.css
@@ -48,9 +48,6 @@ body {
 .testimonial-image{
     display: flex;
 }
-/* .left-quote{
-    margin-right: 80px;
-} */
 .testimonial-image img {
     border-radius: 50%;
     width: 100px;
@@ -101,4 +98,10 @@ text-align: center;
     .testimonial-section{
         padding: 20px;
     }
+        .image-alignment {
+    
+            text-align: center;
+            margin: auto;
+        }
+    
 }
