--- a/src/components/yamunaNagarSection.css
+++ b/src/components/yamunaNagarSection.css
@@ -70,6 +70,10 @@ P {
         order: 2;
         padding: 20px;
     }
+
+    .font-32{
+        font-size: 22px;
+    }
 }
 
 @media only screen and (min-width:769px) and (max-width:1200px) {
